--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ amqp==1.4.6
 anyjson==0.3.3
 billiard==3.3.0.19
 celery==3.1.17
+cssselect==0.9.1
 Django==1.7.2
 django-celery==3.1.16
 kombu==3.0.24
 psycopg2==2.5.4
+pyquery==1.2.9
 pytz==2014.10
+requests==2.5.1
